k8s/ingress/ingress-secured.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-secured
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tds-entry-ip
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /api/local
            backend:
              serviceName: core-svc
              servicePort: 8080
          - path: /api/product-category
            backend:
              serviceName: core-svc
              servicePort: 8080
          - path: /api/menu
            backend:
              serviceName: core-svc
              servicePort: 8080
          - path: /api/customers
            backend:
              serviceName: user-svc
              servicePort: 8080
          - path: /auth
            backend:
              serviceName: keycloak-svc
              servicePort: 8080
          - path: /oauth2/authorization/user-app
            backend:
              serviceName: user-svc
              servicePort: 8080
          - path: /login/oauth2/code/user-app
            backend:
              serviceName: user-svc
              servicePort: 8080
