k8s/ingress/ingress_cloud.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-cloud
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tds-entry-ip
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api/local
            backend:
              serviceName: core
              servicePort: 8080
          - path: /api/product-category
            backend:
              serviceName: core
              servicePort: 8080
          - path: /api/menu
            backend:
              serviceName: core
              servicePort: 8080
          - path: /api/userhistory
            backend:
              serviceName: history
              servicePort: 8080
          - path: /api/summary
            backend:
              serviceName: history
              servicePort: 8080
