k8s/ingress/ingress_initial.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-inital
  namespace: default
spec:
  tls:
    - secretName: tourdeshot-teamg-com-tls
    - hosts:
        - tourdeshot.teamg.com
  rules:
    - host: tourdeshot.teamg.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /local
            backend:
              serviceName: core
              servicePort: 8080
#          - path: /api/product-category(/|$)(.*)
#            backend:
#              serviceName: core
#              servicePort: 8080
#          - path: /api/menu(/|$)(.*)
#            backend:
#              serviceName: core
#              servicePort: 8080
#          - path: /api/history(/|$)(.*)
#            backend:
#              serviceName: history
#              servicePort: 8080
